# sampleQT

./: CMakeLists.txt  camerawidget.cpp  camerawidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
